tests/pass/LongMaker.java
package  pass;

import java.lang.Long;
import java.lang.System;


//this doesn't pass tests but it passed the run up to parser
public class LongMaker {
	public long LongMakerTest(long theLong) {
		long theTest = theLong;
		return theTest;
	}
}
