tests/fail/Do.java
package fail;

import java.lang.System;

public class Do {

  public static void main(String[] args ) {
    String do = "Can't use this word";
  }

}
